updates to links

--- a/home.html
+++ b/home.html
@@ -13,15 +13,15 @@
 <div class="menubar">
 		<table class="tablecenter">
 		<tr>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/home.html">Home</a></td>
+		<td><a class="buttonattempt1" href="index.html">Home</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/mystory.html">About</a></td>
+		<td><a class="buttonattempt1" href="mystory.html">About</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/resume.html">Resume</a></td>
+		<td><a class="buttonattempt1" href="resume.html">Resume</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/projects.html">Projects</a></td>
+		<td><a class="buttonattempt1" href="projects.html">Projects</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/travel/myoyster.html">Travel</a></td>
+		<td><a class="buttonattempt1" href="travel/myoyster.html">Travel</a></td>
 		</tr>
 		</table>
 	</div>
@@ -32,7 +32,7 @@
       <div class="container">
         <h1 class="monogram"> <img src="monogramwhitecursivecrop.png" style="width:371.5px;height:241.75px;"> </h1>
         <p>Informatics and Information Systems student at Indiana University</p>
-        <a class="btn" href="http://pages.iu.edu/~caebraun/mystory.html">My Story</a>
+        <a class="btn" href="mystory.html">My Story</a>
       </div>
     </div>
 
@@ -79,7 +79,7 @@
         <h2>Professional</h2>
         <p>I'm looking forward to graduation with my BS and BSB in May 2019. 
 	  </br>Learn more about my personal brand, view my current resume, and peruse my recent projects.</p>
-        <a class="btn" href="http://pages.iu.edu/~caebraun/resume.html">Resume</a>
+        <a class="btn" href="resume.html">Resume</a>
       </div>
     </div>
 
@@ -87,12 +87,13 @@
       <div class="container">
         <div class="videocontain">
             <video loop muted autoplay poster="videofreeze.jpg">
-                <source src="changetheworldvideo.mp4" type="video/mp4"></video></div>
+                <source src="changetheworldvideo.mp4" type="video/mp4">
+			</video></div>
         <h2>Let's change the world together.</h2>
-        <a class="btn" href="http://pages.iu.edu/~caebraun/contact.html">Contact me</a>
+        <a class="btn" href="contact.html">Contact me</a>
       </div>
     </br></br></br></br></br></br></br></br></br></br>
-    <p class="actualfooter">Videography by Jeremy Tatara | Webpage created by Caroline Braun ©2018</p>
+    <p class="actualfooter">Videography by Jeremy Tatara | Webpage created by Caroline Braun ©2019</p>
     </div>
 
 	<script>
