--- a/mystory.html
+++ b/mystory.html
@@ -14,15 +14,15 @@
 <div class="menubar">
 		<table class="tablecenter">
 		<tr>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/home.html">Home</a></td>
+		<td><a class="buttonattempt1" href="index.html">Home</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/mystory.html">About</a></td>
+		<td><a class="buttonattempt1" href="mystory.html">About</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/resume.html">Resume</a></td>
+		<td><a class="buttonattempt1" href="resume.html">Resume</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/projects.html">Projects</a></td>
+		<td><a class="buttonattempt1" href="projects.html">Projects</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/travel/myoyster.html">Travel</a></td>
+		<td><a class="buttonattempt1" href="travel/myoyster.html">Travel</a></td>
 		</tr>
 		</table>
 	</div>
@@ -94,11 +94,11 @@
 	  <h2>Feedback</h2>
 	  <p class="i3right">From Erin Hollinden, Hoosier Hills Food Bank</p>
 	    <p><i>A good number of agencies this month took advantage of our new option for submitting service statistics using the online form Caroline created for us.  I asked how it worked for them and got comments like this:
-		</br></br>From an elderly food pantry operator who previous printed the form, wrote on it, copied it, and snail-mailed it to me:  “It was very easy.  Thanks.”
-		</br></br>From a minister who single-handedly runs both a youth program and a food pantry:  “It was so easy to input my stats!  I really appreciate this online option.”
-		</br></br>From a residential recovery program supervisor who has often sent stats late but was prompt this time: “I indeed found the new form to be way easier to fill out and submit. Thank you.”
-		</br></br>From manager of free public lunches who has been in her position only six months: “I really liked submitting the stats online. I feel like it was much easier.”
-		</br></br>From a food pantry director who previously printed the form, wrote on it, took a picture of it, and texted it to me: “It was super easy!!” 
+		</br></br>From an elderly food pantry operator who previous printed the form, wrote on it, copied it, and snail-mailed it to me:  "It was very easy.  Thanks."
+		</br></br>From a minister who single-handedly runs both a youth program and a food pantry:  "It was so easy to input my stats!  I really appreciate this online option."
+		</br></br>From a residential recovery program supervisor who has often sent stats late but was prompt this time: "I indeed found the new form to be way easier to fill out and submit. Thank you."
+		</br></br>From manager of free public lunches who has been in her position only six months: "I really liked submitting the stats online. I feel like it was much easier."
+		</br></br>From a food pantry director who previously printed the form, wrote on it, took a picture of it, and texted it to me: "It was super easy!!"
 		</br></br>So thank you, Caroline and Jake!</i></p>
 		<p class="i3right">From Dr. Mark Saunders, Website Client & Inventor of AxisEnAqua</p>
 		<p><i>From what I have seen with your website development and your extracurricular involvement related to your academic career, you have a very promising and rewarding journey ahead. I look forward to seeing great accomplishments coming from you and all of your noble efforts.</i></p>
@@ -113,7 +113,7 @@
 	
 	
 	<div class="btncenter">
-          <a class="btn2" href="http://pages.iu.edu/~caebraun/contact.html">Contact Me</a>
+          <a class="btn2" href="contact.html">Contact Me</a>
 	</div>
 	
 
@@ -125,10 +125,10 @@
     <div class="footer">
       <div class="container">
         <h2> </h2>
-	<a class="btn" href="http://pages.iu.edu/~caebraun/home.html">Return to Home</a>
+	<a class="btn" href="index.html">Return to Home</a>
       </div>
     </br></br></br></br></br></br></br></br></br></br></br></br></br>
-    <p class="actualfooter">Webpage created by Caroline Braun ©2018</p>
+    <p class="actualfooter">Webpage created by Caroline Braun ©2019</p>
     </div>
 
 	<script>
