updates to links

--- a/projects.html
+++ b/projects.html
@@ -14,15 +14,15 @@
 <div class="menubar">
 		<table class="tablecenter">
 		<tr>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/home.html">Home</a></td>
+		<td><a class="buttonattempt1" href="index.html">Home</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/mystory.html">About</a></td>
+		<td><a class="buttonattempt1" href="mystory.html">About</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/resume.html">Resume</a></td>
+		<td><a class="buttonattempt1" href="resume.html">Resume</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/projects.html">Projects</a></td>
+		<td><a class="buttonattempt1" href="projects.html">Projects</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/travel/myoyster.html">Travel</a></td>
+		<td><a class="buttonattempt1" href="travel/myoyster.html">Travel</a></td>
 		</tr>
 		</table>
 	</div>
@@ -54,7 +54,7 @@
 	
 
 	<div class="col3">
-	  <a href="http://pages.iu.edu/~caebraun/personalbrandposter.pdf">
+	  <a href="personalbrandposter.pdf">
 		<img src="personalbrandposter.JPG" style="height: 100%; width: 100%; max-width: 300px; object-fit: contain"/>
 	  </a>
 	<p style="max-width: 300px; width: 100%"><strong>Personal Brand Poster</strong>
@@ -131,7 +131,7 @@
 <!--fourth row of projects-->
       <div class="clearfix"></div>
 	<div class="col1">
-	  <a href="http://pages.iu.edu/~caebraun/montecarloanalysis.xlsm">
+	  <a href="montecarloanalysis.xlsm">
 		<img src="montecarloanalysis.JPG" style="height: 100%; width: 100%; max-width: 300px; object-fit: contain"/>
 	  </a>
 	<p style="max-width: 300px; width: 100%"><strong>Excel Monte Carlo Analysis & Dashboard</strong>
@@ -140,7 +140,7 @@
 	</div>
 	
 	<div class="col2">
-	  <a href="http://pages.iu.edu/~caebraun/networkdesign.pdf">
+	  <a href="networkdesign.pdf">
 		<img src="networkdesign.JPG" style="height: 100%; width: 100%; max-width: 300px; object-fit: contain"/>
 	  </a>
 	<p style="max-width: 300px; width: 100%"><strong>LAN/WAN Network Design Project</strong>
@@ -149,7 +149,7 @@
 	</div>
 	
     <div class="col3">
-	  <a href="http://pages.iu.edu/~caebraun/enjoylifereport.pdf">
+	  <a href="enjoylifereport.pdf">
 	 	<img src="enjoylifereport.JPG" style="height: 100%; width: 100%; max-width: 300px; object-fit: contain"/>
 	  </a>
 	<p style="max-width: 320px; width: 100%"><strong>"Disfruta la Vida" Report for Enjoy Life Foods</strong>
@@ -171,10 +171,10 @@
     <div class="footer">
       <div class="container">
         <h2> </h2>
-        <a class="btn" href="http://pages.iu.edu/~caebraun/home.html">Return to Home</a>
+        <a class="btn" href="index.html">Return to Home</a>
       </div>
     </br></br></br></br></br></br></br></br></br></br></br></br></br>
-    <p class="actualfooter">Webpage created by Caroline Braun ©2018</p>
+    <p class="actualfooter">Webpage created by Caroline Braun ©2019</p>
     </div>
 
 	<script>
