--- a/resume.html
+++ b/resume.html
@@ -14,15 +14,15 @@
 <div class="menubar">
 		<table class="tablecenter">
 		<tr>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/home.html">Home</a></td>
+		<td><a class="buttonattempt1" href="index.html">Home</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/mystory.html">About</a></td>
+		<td><a class="buttonattempt1" href="mystory.html">About</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/resume.html">Resume</a></td>
+		<td><a class="buttonattempt1" href="resume.html">Resume</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/projects.html">Projects</a></td>
+		<td><a class="buttonattempt1" href="projects.html">Projects</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/travel/myoyster.html">Travel</a></td>
+		<td><a class="buttonattempt1" href="travel/myoyster.html">Travel</a></td>
 		</tr>
 		</table>
 	</div>
@@ -44,14 +44,14 @@
     <div class="footer">
       <div class="container">
         <h2> </h2>
-	<a class="btn2" href="http://pages.iu.edu/~caebraun/caebraunresume.pdf">Download</a>
+	<a class="btn2" href="caebraunresume.pdf">Download</a>
 	</br>
 	</br>
 	</br>
-	<a class="btn" href="http://pages.iu.edu/~caebraun/home.html">Return to Home</a>
+	<a class="btn" href="index.html">Return to Home</a>
       </div>
     </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-    <p class="actualfooter">Webpage created by Caroline Braun ©2018</p>
+    <p class="actualfooter">Webpage created by Caroline Braun ©2019</p>
     </div>
 
 
