--- a/contact.html
+++ b/contact.html
@@ -14,15 +14,15 @@
 <div class="menubar">
 		<table class="tablecenter">
 		<tr>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/home.html">Home</a></td>
+		<td><a class="buttonattempt1" href="index.html">Home</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/mystory.html">About</a></td>
+		<td><a class="buttonattempt1" href="mystory.html">About</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/resume.html">Resume</a></td>
+		<td><a class="buttonattempt1" href="resume.html">Resume</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/projects.html">Projects</a></td>
+		<td><a class="buttonattempt1" href="projects.html">Projects</a></td>
 		<td class="invisible"></td>
-		<td><a class="buttonattempt1" href="http://pages.iu.edu/~caebraun/travel/myoyster.html">Travel</a></td>
+		<td><a class="buttonattempt1" href="travel/myoyster.html">Travel</a></td>
 		</tr>
 		</table>
 	</div>
@@ -36,7 +36,7 @@
 	    <img src="linkedin.png" style="height: 100%; width: 100%; max-width: 60px; object-fit: contain"/>
 	    </a>
 		&nbsp;&nbsp;&nbsp;&nbsp;
-	    <a href="mailto:caebraun@indiana.edu">
+	    <a href="mailto:carolinebraun@hotmail.com">
 	    <img src="gmail.ico" style="height: 100%; width: 100%; max-width: 60px; object-fit: contain"/>
 	    </a>
 	    </br></br></br>
@@ -55,10 +55,10 @@
 
     <div class="footer">
       <div class="container">
-        <a class="btn" href="http://pages.iu.edu/~caebraun/home.html">Return to Home</a>
+        <a class="btn" href="index.html">Return to Home</a>
       </div>
     </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-    <p class="actualfooter">Webpage created by Caroline Braun ©2018</p>
+    <p class="actualfooter">Webpage created by Caroline Braun ©2019</p>
     </div>
 
 	<script>
