updates for qualtrics

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="main">
       <div class="container">
         <h1 class="monogram"> <img src="monogramwhitecursivecrop.png" style="width:371.5px;height:241.75px;"> </h1>
-        <p>Informatics and Information Systems student at Indiana University</p>
+        <p>Business and Information Technology Professional</p>
         <a class="btn" href="mystory.html">My Story</a>
       </div>
     </div>
@@ -43,25 +43,20 @@
 	  <tr>
             <td valign="top">
 	      <h2>Study</h2>
-            <p>INFO-I494 Senior Capstone Project
-            </br>INFO-I400 Intro to Virtual Reality Design
-			</br>BUS-S433 Information Systems Security
-			</br>BUS-K360 VBA Integration & Automation
-            </br>HON-H211 Honors Seminar in Classic Literature</p>
+            <p>Working toward Qualtrics certifications
+            </br>Maintaining COMPTIA Security+ certification</p>
             </td>
             <td valign="top">
           <h2>Work</h2>
-            <p>PLTL Leader for INFO-I201
-			</br>Lending Assistant for Wells Library
-	        </br>Freelance Web Designer
-            </br>Web Development Intern at Hoosier Hills </p>
+            <p>Product Specialist at Qualtrics
+	        </br>Freelance web designer, consultant
+            </br>Portrait photographer </p>
             </td>
             <td valign="top">
           <h2>Fun</h2>
-            <p>Training for the Indy Mini Marathon
-	        </br>Playing flute in concert band
-			</br>Mentor for Hutton Honors College freshmen
-	        </br>Planning upcoming trip to Germany</p>
+            <p>Planning upcoming trips to Germany & Croatia
+	        </br>Checking off my National Parks bucket list
+	        </br>Training for the Indy Mini Marathon</p>
             </td>
           </tr>
 	</table>
