--- a/mystory.html
+++ b/mystory.html
@@ -57,10 +57,11 @@
         <div class="colright">
           <h2>Experience</h2>
 	    <p class="i3right">Employment</p>
-		  <p><strong>Peer Led Team Learning leader</strong>, School of Informatics, Computing, and Engineering; August 2017-Present
+		  <p><strong>Product specialist</strong>, Qualtrics; July 2019-Present
+		  </br></br><strong>Lending assistant</strong>, Indiana University Wells Library; April 2018-May 2019
 		  </br></br><strong>Production assistant</strong>, Pigasus Pictures; July 2018
-		  </br></br><strong>Lending assistant</strong>, Indiana University Wells Library; May 2018-Present
 		  </br></br><strong>Website development intern</strong>, Hoosier Hills Food Bank; April-September 2018
+		  </br></br><strong>Peer Led Team Learning leader</strong>, School of Informatics, Computing, and Engineering; August 2017-May 2018
 		  </br></br><strong>Freshmen Orientation leader</strong>, Hutton Honors College; June 2017 & 2018
 		  </br></br><strong>Website development intern</strong>, Opportunity House; June 2017
 		  </br></br><strong>Special event cashier</strong>, Light and Breuning, Inc.; May 2015-June 2017
@@ -79,11 +80,11 @@
  	  </br>
 	  </br>
 	  <h2>Interests</h2>
-	  <p class="moveover">I love to travel. I'll sit through a week-long conference if it means I get to see a new city. Adventure is awesome. In summer 2017, I loved backpacking Europe as well as working on a microfinance project with a local textile and ecotourism business in Cusco, Peru.
-  	  <p class="moveover">I love my friends. They're the best people I know. Who else would visit Niagara Falls in December? Celebrate New Year's in a parking lot? Get me to run a mini marathon?
+	  <p class="moveover">I love to travel. I always enjoy a new adventure. In summer 2017, I loved backpacking Europe as well as working on a microfinance project with a local textile and ecotourism business in Cusco, Peru. Since then I've visited nine countries on two continents.</p>
+  	  <p class="moveover">I love my friends. They're the best people I know. Who else would visit Niagara Falls in December? Get me to run a mini marathon? Encourage me to move across the country?</p>
 	  <p class="moveover">I love filmmaking. I'm never going to be the creative genius, but I love helping with the logistics that make someone's vision come to life. Production is dynamic and all-consuming like nothing else.</p>
 	  <p class="moveover">I love rabbits. As a child, my family had every kind of small animal, from hedgehogs to chinchillas. I petsit whenever I get the opportunity. Even if it's an injured bat we found in a parking lot.</p>
-	  <p class="moveover">I love cooking. Especially pasta. If it has lemon, pesto or garlic, it's going to be good, and cooking is an amazing stress reliever.</p>
+	  <p class="moveover">I love to learn new things. I enjoy trying new recipes, exploring new places, meeting new people, and taking new classes. I hope to never stop growing.</p>
 	</div>
 
        <div class="pictureleft"></br></br></br></br></br><img src="test.jpg" style="height: 100%; width: 100%; object-fit: contain"/></div>
