--- a/home.html
+++ b/home.html
@@ -26,7 +26,8 @@
 		</table>
 	</div>
 
-
+
+
 
     <div class="main">
       <div class="container">
@@ -42,7 +43,7 @@
 	  <tr>
             <td valign="top">
 	      <h2>Study</h2>
-            <p>Working toward Qualtrics certifications
+            <p>Working toward Qualtrics EX & CX certifications
             </br>Maintaining COMPTIA Security+ certification</p>
             </td>
             <td valign="top">
@@ -53,9 +54,9 @@
             </td>
             <td valign="top">
           <h2>Fun</h2>
-            <p>Planning upcoming trips to Germany & Croatia
+            <p>Planning upcoming trip to Australia
 	        </br>Checking off my National Parks bucket list
-	        </br>Training for the Indy Mini Marathon</p>
+	        </br>Training for the Grand Teton Half Marathon</p>
             </td>
           </tr>
 	</table>
@@ -72,8 +73,7 @@
     <div class="supporting">
       <div class="container">
         <h2>Professional</h2>
-        <p>I'm looking forward to graduation with my BS and BSB in May 2019. 
-	  </br>Learn more about my personal brand, view my current resume, and peruse my recent projects.</p>
+        <p>Learn more about my personal brand or view my recent projects.</p>
         <a class="btn" href="resume.html">Resume</a>
       </div>
     </div>
@@ -88,7 +88,7 @@
         <a class="btn" href="contact.html">Contact me</a>
       </div>
     </br></br></br></br></br></br></br></br></br></br>
-    <p class="actualfooter">Videography by Jeremy Tatara | Webpage created by Caroline Braun ©2019</p>
+    <p class="actualfooter">Videography by Jeremy Tatara | Webpage created by Caroline Braun Â©2020</p>
     </div>
 
 	<script>
