--- a/home.html
+++ b/home.html
@@ -98,7 +98,7 @@
                 <source src="changetheworldvideo.mp4" type="video/mp4">
 			</video></div>
         <h2>Let's change the world together.</h2>
-        <a class="btn" href="contact.html">Contact me</a>
+        <a class="btn" href="https://contactcaroline.qualtrics.com/jfe/form/SV_0j12GszXQDOGOI5">Contact me</a>
       </div>
     </br></br></br></br></br></br></br></br></br></br>
     <p class="actualfooter">Videography by Jeremy Tatara | Webpage created by Caroline Braun ©2020</p>
